--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
     "@react-three/drei": "^9.105.3",
     "@react-three/fiber": "^8.16.1",
     "@types/three": "^0.163.0",
+    "cannon-es": "^0.20.0",
+    "cannon-es-debugger": "^1.0.0",
+    "leva": "^0.9.35",
+    "lil-gui": "^0.19.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "three": "^0.163.0"
